hphp/hack/test/typecheck/expression_trees/splice_err3.php.exp
File "splice_err3.php", line 13, characters 17-21:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 224, characters 35-44:
  Expected `ExampleInt`
  File "splice_err3.php", line 7, characters 10-22:
  But got `TInfer#1 = ExampleString`
  File "expr_tree.hhi", line 14, characters 33-38:
    via this generic `TInfer`
